--- a/app/index.html
+++ b/app/index.html
@@ -12,10 +12,10 @@
    
 	
 <!-- Latest compiled and minified bootsrap CSS -->
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">	
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">	
 
 <!-- Latest compiled bootstrap JavaScript -->    
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
  
  <!-- Latest compiled minified font-awesome CSS -->  
