--- a/app/index.html
+++ b/app/index.html
@@ -66,11 +66,11 @@ https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0/angular-resource.js"></s
   
   
 <!-- Latest compiled  angular-sanitize.min.js JavaScript -->	
-<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-sanitize.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-sanitize.min.js"></script>
 
 <!-- Latest compiled  angular-base64/2.0.5/angular-base64.js" JavaScript -->	
 <script src="
-//cdnjs.cloudflare.com/ajax/libs/angular-base64/2.0.5/angular-base64.js"></script>
+https://cdnjs.cloudflare.com/ajax/libs/angular-base64/2.0.5/angular-base64.js"></script>
 
 
 <!--for bootstrap multiple select checkbox -->
