--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
 <title>Butterfly Catcher</title>
    
 <!-- Latest compiled and minified jquery.js -->	
-<script data-require="jquery" data-server="2.1.3" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>	
+<script  src="https://code.jquery.com/jquery-2.1.3.min.js"></script>	
    
 	
 <!-- Latest compiled and minified bootsrap CSS -->
